Update Jenkinsfile
agrega add-opens